--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 django = "^5.0.6"
 djangorestframework = "^3.15.2"
 gunicorn = "^22.0.0"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
