--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.0.6"
 djangorestframework = "^3.15.2"
 gunicorn = "^22.0.0"
 python-dotenv = "^1.0.1"
+uvicorn = "^0.30.1"
 
 
 [build-system]
