--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.15.2"
 gunicorn = "^22.0.0"
 python-dotenv = "^1.0.1"
 uvicorn = "^0.30.1"
+whitenoise = {extras = ["brotli"], version = "^6.7.0"}
 
 
 [build-system]
